--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 .test {
-  padding: auto;
+  background-color: aqua;
+  margin-left: 30%;
+  margin-right: 30%;
+  border-radius: 10px;
+  height: 100%;
+  margin-top: 20%;
+}
+.test1 {
+  margin-bottom: 2%;
 }
